Changein Division buttion

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <button class="operater">AC</button>
             <button class="operater">DEL</button>
             <button class="operater">%</button>
-            <button class="operater">÷</button>
+            <button class="operater">/</button> 
+            <!-- changes in division buttion  -->
         </div>
         <div>
             <button>7</button>
@@ -37,7 +38,7 @@
         <div>
             <button>00</button>
             <button>0</button>
-            <button class="operater"    >.</button>
+            <button class="operater">.</button>
             <button class="equalBtn">=</button>
         </div>
     </div>
