--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div>
+        Calculator
+    </div>
     <div class="calculator">
         <!-- <h1>Calculator</h1> -->
         <input type="text" placeholder="0" id="input-box">
