--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-      <h1 id="input-box">Calculator</h1>  
+      <h1 id="input-box heading">Calculator</h1>  
     </div>
     <div class="calculator">
         <!-- <h1>Calculator</h1> -->
